# android-rasp

./: build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
native/: Cargo.toml  build.sh
rasp/: build.gradle.kts
rasp/src/main/java/com/securevale/rasp/android/api/result/: Result.kt
sample-app/: build.gradle.kts
sample-app/src/main/res/values/: themes.xml
