[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
jni = "0.21.1"
android_logger = "0.15.0"
once_cell = "1.19.0"

[lib]
name = "native"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[target.aarch64-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384"
]

[target.armv7-linux-androideabi]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384"
]

[target.x86_64-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384"
]

[target.i686-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384"
]

#[profile.release-with-debug]
#inherits = "release"
#debug = true